# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.database-migration  LICENSE  README.md  docker-compose.yaml
.github/workflows/: rust.yml
.sqlx/: query-2d49757b828e5d73e9634c5f697aa78340482dbe4a3557f3c93de1b991cd23ab.json  query-751b4a4dcc24ec70baa2688236d8e938675c5c98285acb56b305566efdd586a6.json  query-753c8ecfac0ea7d052e60cb582e3b3ebac5e50eb133152712ca18ab5d5e202f3.json  query-993e68eed67cbef2d34a251c3571602dad311886ee731bfa6819689b11ffb2ae.json  query-ad120337ee606be7b8d87238e2bb765d0da8ee61b1a3bc142414c4305ec5e17f.json  query-f605926e7aee90859128f0b7312f5bf3bf6cc1a7e5b620061d9338ceca9f5fb4.json
configuration/: base.yaml  dev.yaml
migrations/: 20240903193657_create_subscriptions_table.sql  20240922185206_create_subscriptions_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs
src/api/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/: healthcheck.rs  subscriptions.rs
tests/: health.rs
