[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.209", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "macros",
    "postgres",
    "chrono",
    "migrate",
] }
config = "0.14.0"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
unicode-segmentation = "1.11.0"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0.24"
anyhow = "1.0.40"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
fake = "2.9"
rand = "0.8"
claims = "0.7"
wiremock = "0.6"
serde_json = "1.0.61"